#pragma once

enum BallType {
    NORMAL,
    WIDEBALL,
    NOBALL
};
