#pragma once

enum RunType {
    ZERO,
    ONE,
    TWO,
    THREE,
    FOUR,
    SIX
};
