#pragma once
#include <string>
using namespace std;

class Person {
public:
    string name;
    int age;
    string address;

    Person() : age(0) {}
};
