#pragma once

enum PlayerType {
    BATSMAN,
    BOWLER,
    WICKETKEEPER,
    CAPTAIN,
    ALLROUNDER
};
