#pragma once

enum WicketType {
    RUNOUT,
    BOLD,
    CATCH_OUT
};
